# tree_age_calculator

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  tree_age_calculator.py
docs/: FIA_AGE_SIZE_V1_MODEL_CARD.md  FIA_DATA_PIPELINE.md  URBAN_SUGAR_MAPLE_MODEL_CARD.md  fia_age_size_v1_evaluation.json
scripts/: install.ps1
src/tree_age/: __init__.py  __main__.py  cli.py  errors.py  measurements.py  result.py  species.py
src/tree_age/data/: __init__.py  fia_age_size_v1.json  growth_factors.csv  urban_tree_northeast_sugar_maple.csv  urban_tree_northeast_sugar_maple_metadata.json
src/tree_age/estimators/: __init__.py  bai_reference.py  base.py  ensemble.py  fia_age_size.py  growth_factor.py  registry.py  urban_sugar_maple.py
src/tree_age/fia/: __init__.py  clean.py  cli.py  download.py
src/tree_age/modeling/: __init__.py  train.py
src/tree_age/urban/: __init__.py  prepare.py
tests/: test_bai_reference.py  test_cli.py  test_ensemble.py  test_estimator_contract.py  test_fia_clean.py  test_fia_model.py  test_growth_factor.py  test_measurements.py  test_module_entrypoint.py  test_species.py  test_urban_sugar_maple.py
