[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-age-estimator"
version = "0.1.0"
description = "Estimate plausible tree age ranges from species and circumference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

[project.scripts]
tree-age = "tree_age.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

